$Id: ChangeLog,v 1.86 2007-09-20 21:29:13 cmatsuoka Exp $

Stable versions
---------------

2.3.0 ()
	- added runtime endianism detection
	- removed reverse-endian sample reading options and XMP_CTL_BIGEND
	- fixed semantics of options --big-endian and --little-endian
	- fixed memory corruption in Quadra Composer module loader
	- fixed Quadra Composer vibrato, offset and jump effects
	- fixed endianism problem in KSM and Zen Packer loaders
	- fixed transposition of Digital Tracker module notes
	- fixed build for QNX Neutrino 6.3.2
	- prowizard code cleanup

2.2.1 (20070917)
	- added IT tracker fingerprinting
	- enabled track volumes (fixes znm-believe.it, reported by Jon Rafkind)
	- fixed DESTDIR and config file location (by Adam Sampson)
	- fixed volume overdrive in the Megatracker loader
	- fixed probing order of PW-packed and Arc
	- raised sample number limit from 255 to 1024 (fixes megaman.xm
	  tempo and missing instruments reported by Jon Rafkind)
	- build plugin files as PIC

2.2.0 (20070915)
	- added more module format specs
	- added CD61 Octalyser module support
	- added Flextrax FLX module detection
	- added TCB Tracker module loader
	- added Digital Tracker DTM module loader
	- added Digital Tracker FA04/6/8 module support
	- added Real Tracker module loader
	- added X-Tracker module loader
	- added portable, 64bit-safe MMD0/1/2/3 MED loader
	- added Graoumf Tracker GTK module loader
	- added old Liquid Tracker "NO" module loader
	- added OSX CoreAudio driver
	- added S3M/PTM/IMF/LIQ/IT fine vibrato effect
	- added Archimedes Tracker loader
	- added Arc/!Spark depacker
	- added ArcFS depacker
	- added Archimedes VIDC sample converter
	- added Digital Symphony module loader
	- added Megatracker module loader
	- added Desktop Tracker module loader
	- added Zoo depacker
	- added MED3 module loader
	- added MED4 module loader
	- added IIgs ASIF sample converter
	- added IIgs SoundSmith/MegaTracker loader
	- added Audacious plugin
	- enabled WAV writer